# HPC

./: .gitignore  README.md
Assignment 2/: TemperatureAnalysis.cpp  TemperatureAnalysis.h  main.cpp
Assignment_1/: test.cpp  test_smp.out  test_smp.script
Assignment_2/: CMakeCache.txt  CMakeLists.txt  Makefile  TemperatureAnalysis.cpp  TemperatureAnalysis.h  TemperatureAnalysisParallel.cpp  TemperatureAnalysisParallel.h  build.sh  cmake_install.cmake  main  main.cpp  run.script  sanity_check.cpp  smp.script  test  testInput.txt
MPI_Assignment/: CMakeCache.txt  CMakeLists.txt  Makefile  TemperatureAnalysisMPI.cpp  TemperatureAnalysisMPI.h  TemperatureAnalysisParallel.cpp  TemperatureAnalysisParallel.h  cmake_install.cmake  main  main.cpp  mpi.script  run.sh  test.err  test.out
MPI_Assignment/test_mpi/: run.sh  test.cpp  test.out  test_mpi.cpp
assignment_1/: test_mpi.c  test_mpi.out  test_mpi.script
